# price-prediction-temp

./: _parser.py  analize.py  eda.py  main.py  pre_processing.py  pyproject.toml  utils.py  visualization.py
data/parsed/: ACLBSL.csv  ADBL.csv  ADBLD83.csv  ADLB.csv  AHL.csv  AHPC.csv  AIL.csv  AKBSL.csv  AKJCL.csv  AKPL.csv  ALBSL.csv  ALICL.csv  AMFI.csv  ANLB.csv  API.csv  AVYAN.csv  BARUN.csv  BBC.csv  BEDC.csv  BFC.csv  BHBL.csv  BHDC.csv  BHL.csv  BHPL.csv  BNHC.csv  BNT.csv  BOKD86.csv  BOKL.csv  BPCL.csv  BPW.csv  CBBL.csv  CBL.csv  CBLD88.csv  CBLPO.csv  CCBD88.csv  CCBL.csv  CCBLPO.csv  CEFL.csv  CFCL.csv  CGH.csv  (+333 more)
data/sectorwise/: banking.csv  development.csv  finance.csv  float.csv  hotels_and_tourism.csv  hydropower.csv  investment.csv  life_insurance.csv  manufacturing_and_processing.csv  microfinance.csv  mutual_fund.csv  nepse.csv  non_life_insurance.csv  others.csv  sensitive.csv  sensitive_float.csv  trading.csv
data/stockwise/: ACLBSL.csv  ACLBSLP.csv  ADBL.csv  ADBLD83.csv  ADLB.csv  AHL.csv  AHPC.csv  AIL.csv  AKBSL.csv  AKBSLP.csv  AKJCL.csv  AKPL.csv  ALBSL.csv  ALBSLP.csv  ALICL.csv  ALICLP.csv  AMFI.csv  ANLB.csv  API.csv  AVYAN.csv  BARUN.csv  BBC.csv  BEDC.csv  BFC.csv  BFCPO.csv  BGWT.csv  BHBL.csv  BHBLPO.csv  BHDC.csv  BHL.csv  BHPL.csv  BNHC.csv  BNL.csv  BNT.csv  BOKD86.csv  BOKL.csv  BOKLPO.csv  BPCL.csv  BPW.csv  BSBLPO.csv  (+515 more)
